<resources>
    <string name="app_name">Pill Check!</string>
    <string name="medTextAdd">Medicine</string>
    <string name="medName">Med Name</string>
    <string name="frequency">Frequency</string>
    <string name="time">Time</string>
    <string name="atTime">Set Time</string>
    <string name="interval">Interval</string>
    <string name="atInterval">Set Interval</string>
    <string name="every">Every</string>
    <plurals name="pDay">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="pWeek">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <plurals name="pMonth">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <string name="time_format">HH:mm</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete</string>
    <string name="meds_detail_fragment_label">Med Detail</string>
    <string name="meds_list_fragment_label">Meds List</string>
    <string name="edit_fragment_title">Edit Med</string>
    <string name="meds_add_fragment_label">Add Med</string>
    <string name="med_name_hint">Name of medication</string>
    <string name="desc_add_med">Button to add a medication</string>
    <string name="alarm_text">Alarm</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="create_medication">CREATE MEDICATION</string>
    <string name="cancel">CANCEL</string>
</resources>