<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vM"
            type="dev.brdlf.medtracker.viewmodel.MedBuilderViewModel" />

        <import type="android.view.View"/>
    </data>
    <!--TODO: Make pretty-->
    <!--TODO: Make style for layout-->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddMedicationFragment">

        <!--Med-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_meds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/section_alarms"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/title"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medTextAdd" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/row_med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="96dp"
                    android:text="@string/medName" />

                <EditText
                    android:id="@+id/input_med_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="2"
                    android:text="@={vM.medName}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PLEASE ADD A DESCRIPTION"/>

            <EditText
                android:id="@+id/input_med_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vM.medDesc}"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:minHeight="48dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/multi_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:showText="true"
                    android:text="Multiple times a day"
                    android:visibility="visible" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Alarms-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_alarms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/section_buttons"
            app:layout_constraintTop_toBottomOf="@id/section_meds"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/alarmText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alarm_text"
                android:textAlignment="center" />
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/alarmdiv"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/alarmDataText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                tools:text="This is where the alarms are going to go, formatted"
                />

            <Button
                android:id="@+id/alarm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="click this to modify alarms" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Buttons-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/section_alarms"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/cancel_button"
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/finish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_medication" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
