<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MedsListFragment">

    <fragment
        android:id="@+id/MedsListFragment"
        android:name="dev.brdlf.medtracker.MedsListFragment"
        android:label="@string/meds_list_fragment_label"
        tools:layout="@layout/fragment_meds_list">

        <action
            android:id="@+id/action_MedsListFragment_to_MedsDetailFragment"
            app:destination="@id/MedsDetailFragment" />
        <action
            android:id="@+id/action_MedsListFragment_to_MedsAddFragment"
            app:destination="@id/MedsAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/MedsDetailFragment"
        android:name="dev.brdlf.medtracker.MedsDetailFragment"
        android:label="@string/meds_detail_fragment_label"
        tools:layout="@layout/fragment_meds_detail">

        <argument
            android:name="item_id"
            android:defaultValue="-1"
            app:argType="integer" />

        <action
            android:id="@+id/action_MedsDetailFragment_to_MedsListFragment"
            app:destination="@id/MedsListFragment"
            app:popUpTo="@id/MedsListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_MedsDetailFragment_to_MedsAddFragment"
            app:destination="@id/MedsAddFragment" />
        <action
            android:id="@+id/action_MedsDetailFragment_to_AlarmsAddFragment"
            app:destination="@id/AlarmsAddFragment" >
        </action>
    </fragment>
    <fragment
        android:id="@+id/MedsAddFragment"
        android:name="dev.brdlf.medtracker.AddMedicationFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_meds">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="item_id"
            android:defaultValue="-1"
            app:argType="integer" />

        <action
            android:id="@+id/action_MedsAddFragment_to_MedsListFragment"
            app:destination="@id/MedsListFragment"
            app:popUpTo="@id/MedsListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_MedsAddFragment_to_AlarmsAddFragment"
            app:destination="@id/AlarmsAddFragment" />
        <action
            android:id="@+id/action_MedsAddFragment_to_MedsDetailFragment"
            app:destination="@id/MedsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/AlarmsAddFragment"
        android:name="dev.brdlf.medtracker.AddAlarmsFragment"
        android:label="@string/alarm_text"
        tools:layout="@layout/fragment_add_alarms"
        >
        <argument
            android:name="item_id"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="item_name"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />

        <action
            android:id="@+id/action_AlarmsAddFragment_to_MedsAddFragment"
            app:destination="@id/MedsAddFragment"
            app:popUpTo="@id/MedsAddFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_AlarmsAddFragment_to_MedsDetailFragment"
            app:destination="@id/MedsDetailFragment"
            app:popUpTo="@id/MedsDetailFragment"
            app:popUpToInclusive="true" />

    </fragment>
</navigation>