<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vM"
            type="dev.brdlf.medtracker.viewmodel.MedAddViewModel" />
        <variable
            name="alarmsAdapter"
            type="dev.brdlf.medtracker.AlarmsListAdapter" />

        <import type="android.view.View"/>
    </data>
    <!--TODO: Make pretty-->
    <!--TODO: Make style for layout-->
    <!--TODO: Remove hardcoded spacing and use weights-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddMedicationFragment">

        <!--Med-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_meds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/section_alarms"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/title"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medTextAdd" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/row_med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/input_med_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="96dp"
                    android:text="@string/medName" />

                <EditText
                    android:id="@+id/input_med_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="2"
                    android:text="@={vM.medName}"
                    android:hint="@string/med_name_hint"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/multi_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:showText="true"
                    android:text="Multiple times a day"
                    android:visibility="visible" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/row_freq"
                android:visibility="@{multiDay.checked ? View.VISIBLE : View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/per_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="96dp"
                    android:text="Doses per day" />

                <EditText
                    android:id="@+id/per_day_doses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:digits="123456789"
                    android:maxLength="1"
                    android:minWidth="48dp"
                    android:text="@={vM.alarmCount}"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dose(s) per day"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Alarms-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_alarms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/section_meds"
            app:layout_constraintBottom_toTopOf="@id/section_hide"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/alarm_text"
                android:id="@+id/alarmText"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                />
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/alarmdiv"
                android:layout_width="match_parent"
                android:layout_height="1dp" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="64dp"
                    android:text="Rules"
                    android:textAlignment="textStart"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/is_Tethered"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:showText="true"
                    android:visibility="visible"
                    android:checked="@={vM.isTethered}"
                    android:textOff="@string/atTime"
                    android:textOn="@string/atInterval"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--TODO: Create layout for recyclerView-->
            <!--        Specifically, I need to have it so that the recyclerview height adapts to the number of items.-->
            <!--        While not taking up more space than it needs.-->
            <!--        and not going past the screensize.-->
            <!--        I should be able to do this with weights.-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alarms_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adapter="@{alarmsAdapter}"
                android:visibility="@{isTethered.checked ? View.GONE : View.VISIBLE}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/view_alarm"
                tools:itemCount="3" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:visibility="@{isTethered.checked ? View.VISIBLE : View.GONE}">

                <TextView
                    android:id="@+id/interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="64dp"
                    android:text="FIRST AT"/>
                <Button
                    style="@style/Widget.MaterialComponents.TimePicker.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="HH:mm"
                    android:textColor="#757575" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:visibility="@{isTethered.checked ? View.VISIBLE : View.GONE}">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="64dp"
                    android:text="THEN AFTER EVERY"/>
                <Button
                    style="@style/Widget.MaterialComponents.TimePicker.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="HH:mm"
                    android:textColor="#757575" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Hide-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/section_alarms"
            app:layout_constraintBottom_toTopOf="@id/section_freq"
            >
            <!--TODO: Add reactive visibility-->

        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--Freq-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_freq"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/section_hide"
            app:layout_constraintBottom_toTopOf="@id/section_buttons"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repeating every"/>

            <!--                TODO: Function that fixes input-->
            <EditText
                android:id="@+id/repeat_every"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="48dp"
                android:text=""
                />

            <!--TODO: Have spinner text be plural-->
            <Spinner
                android:id="@+id/frequency_unit"
                android:contentDescription="frequency of dose"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Buttons-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/section_freq"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel" />
            <Button
                android:id="@+id/finish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Finish" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
